fix: allow all request headers in CORS preflight
Browser preflight may send headers not in the allowlist,
causing the preflight to fail without CORS response headers.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>